--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -82,7 +82,7 @@
   margin-top: 1.5rem;
 }
 
-.sosial-link {
+.social-link {
   display: inline-flex;
   align-items: center;
   justify-content: center;
