--- a/css/pages/cart.css
+++ b/css/pages/cart.css
@@ -19,6 +19,8 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  margin-left: 1.75rem;
+  /* padding-left: 8px; */
 }
 
 /* Custom checkbox styling */
@@ -119,6 +121,9 @@
   padding: 1rem 1.5rem;
   border-radius: 50px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+  border: 2px solid var(--primary-dark);
+  outline: 1px solid rgba(255, 255, 255, 0.5);
+  outline-offset: -3px;
   display: flex;
   align-items: center;
   justify-content: space-between;
