--- a/css/pages/checkout.css
+++ b/css/pages/checkout.css
@@ -2,7 +2,7 @@
 .checkout-page {
   padding: 2rem 0;
   min-height: 70vh;
-  background: linear-gradient(135deg, #f9f7fe 0%, #f0edf5 100%);
+  /* background: linear-gradient(135deg, #f9f7fe 0%, #f0edf5 100%); */
   /* color: red; */
 }
 
