--- a/css/pages/products.css
+++ b/css/pages/products.css
@@ -15,7 +15,7 @@
 .page-header h1 {
   font-size: 2.5rem;
   color: var(--primary-dark);
-  margin-bottom: 0.5rem;
+  /* margin-bottom: 0.5rem; */
   background: linear-gradient(
     135deg,
     var(--primary) 0%,
