--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 /* ===== COLOR PALETTE ===== */
 :root {
   --primary-dark: #433878;
-  --primary: #7e60bf;
+  --primary: #7d5fbf;
   --primary-light: #e4b1f0;
   --primary-soft: #ffe1ff;
 
