nambahin judul comment

--- a/css/pages/product-detail.css
+++ b/css/pages/product-detail.css
@@ -1,4 +1,4 @@
-/* css/pages/product-detail.css */
+/* css/pages/product-detail.css: */
 .product-detail-page {
   max-width: 1400px;
   margin: 0 auto;
